[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsapp"
version = "0.1.0"
description = "Python project metadata for automatic documentation generation"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }